--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             Cuerpo
     </section>
     <footer>
-            pie pagina
+           Direccion y Telefono
     </footer>
     
 </body>
